<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_server"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/str_start" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/str_stop" />

    <!--
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="12sp"
        android:textColor="@android:color/black"/>
        -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_shortcut"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <com.estmob.android.sendanywhere.sdk.ui.example.TextFont
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="0%"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/pb"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/tv_progress" />

        <Button
            android:id="@+id/btn_suspend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_shortcut"
            android:text="@string/str_suspend"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_shortcut"
            android:layout_toRightOf="@+id/btn_suspend"
            android:text="@string/str_resume"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_big"
        android:layout_width="96dp"
        android:layout_height="96dp" />


</LinearLayout>
