<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:actionBarSize"
    android:layout_gravity="top"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/dp_8"
        android:background="@drawable/selector_avator_view">

        <ImageView
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_more_vert_4dp" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iv_mini_avator"
            android:layout_width="@dimen/avator_mini_with"
            android:layout_height="@dimen/avator_mini_with"
            android:layout_marginLeft="@dimen/dp_12"
            android:src="@drawable/img_redprofile"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="1dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_mini_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:alpha="0"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_send"
            style="@style/style_home_text_view"
            android:layout_marginRight="@dimen/dp_8"
            android:text="@string/str_send" />

        <Button
            android:id="@+id/btn_receive"
            style="@style/style_home_text_view"
            android:layout_marginRight="@dimen/dp_8"
            android:text="@string/str_receive" />

    </LinearLayout>

    <com.estmob.android.sendanywhere.sdk.ui.example.TextFont
        android:id="@+id/tv_title"
        style="@style/style_common_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:alpha="1"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>