<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_progress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/topbar"
    android:orientation="vertical"
    tools:showIn="@layout/activity_file_sender">

    <LinearLayout
        android:id="@+id/progress_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2.4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_4">

                <com.estmob.android.sendanywhere.sdk.ui.example.TextFont
                    android:id="@+id/tv_unit_has_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sent"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.estmob.android.sendanywhere.sdk.ui.example.TextFont
                        android:id="@+id/tv_value_storage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/str_0"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <com.estmob.android.sendanywhere.sdk.ui.example.TextFont
                        android:id="@+id/tv_unit_storage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/str_unit_mb"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginBottom="@dimen/dp_6"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp_4">

            <com.estmob.android.sendanywhere.sdk.ui.example.TextFont
                android:id="@+id/tv_unit_has_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_has_time"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.estmob.android.sendanywhere.sdk.ui.example.TextFont
                    android:id="@+id/tv_value_time"
                    style="@style/style_transfer_large_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_0"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.estmob.android.sendanywhere.sdk.ui.example.TextFont
                    android:id="@+id/tv_unit_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_second"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ProgressBar
            android:id="@+id/pb_total"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:progressDrawable="@drawable/progressbar_color" />

        <com.estmob.android.sendanywhere.sdk.ui.example.TextFont
            android:id="@+id/txt_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:visibility="gone"
            android:text="Shared Successfully"/>

    </RelativeLayout>

</LinearLayout>